src/test/resources/kube/quarkus/authorization/allow-get-from-web-app.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-get-from-web-app
  namespace: quarkus
spec:
  selector:
    matchLabels:
      app: rest-app
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/quarkus/sa/web-app-service-account"]
    to:
    - operation:
        methods: ["GET"]
