src/test/resources/kube/quarkus/authorization/allow-get-on-web-app.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-get-on-web-app
  namespace: quarkus
spec:
  selector:
    matchLabels:
      app: web-app
  rules:
  - to:
    - operation:
        methods: ["GET"]
