src/test/resources/kube/quarkus/authorization/use-jwt-group.yaml
# https://istio.io/docs/reference/config/security/authorization-policy/
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "require-group"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - from:
    - source:
       requestPrincipals: ["https://dev-0kw21a7w.auth0.com/*"]
    when:
    - key: request.auth.claims[permissions]
      values: ["secret:group"]
    to:
    - operation:
        paths: ["/secretgroup"]
---
# Allow all that are not denied. E.g. login.html, callback.html...
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "all-non-denied"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["*"]
